--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_BASE_URL=https://loanapp-x5qm.onrender.com
+ VITE_BASE_URL=http://147.93.110.43:8081
+
+#  VITE_BASE_URL=http://192.168.31.179:8086
